# Compress-Bot

./: .gitignore  main.py  pyproject.toml  requirements.txt
modules/: global_variables.py  progress.py  utils.py
